--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-CarouselView/CarouselView.FormsPlugin.Abstractions/bin
-CarouselView/CarouselView.FormsPlugin.Abstractions/obj
-CarouselView/CarouselView.FormsPlugin.Android/bin
-CarouselView/CarouselView.FormsPlugin.Android/obj
-CarouselView/CarouselView.FormsPlugin.iOS/bin
-CarouselView/CarouselView.FormsPlugin.iOS/obj
-CarouselView/CarouselView.FormsPlugin.UWP/bin
-CarouselView/CarouselView.FormsPlugin.UWP/obj
-Demo/bin
-Demo/obj
-Droid/bin
-Droid/obj
-iOS/bin
-iOS/obj
-UWP/bin
-UWP/obj
+bin/
+obj/
 .vs/
 packages
 *.userprefs
